fix font size and finished home on mobile

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,10 +1,10 @@
 @import 'colors';
 header{
-    padding: 1rem;
+    padding: 1.6rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     background-color: $pink;
     >div{
         display: flex;
@@ -12,10 +12,9 @@ header{
         align-items: center;
         >svg{
             color: $reddark;
-            
         }
         >a{
-            margin-right: 1rem;
+            margin-right: 1.6rem;
             border: 2px solid $reddark;
             border-radius: 10%;
             padding: 0.3rem;
@@ -27,7 +26,7 @@ header{
             &:hover{
                 background-color: $reddark;
                 color: $pink;
-                border: 2px solid white;
+                border-radius: 10%;
             }
             &:focus{
                 outline: none;
