--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,3 +1,44 @@
+@import 'colors';
 .home{
-    height: 70vh;
+    height: 80vh;
+    position: relative;
+    color: $lightdark;
+    overflow: hidden;
+    >div{
+        position: relative;
+        top: 20rem;
+        left: 3.2rem;
+        >h1{
+            font-size: 4rem;
+            text-transform: uppercase;
+        }
+        >p{
+        font-size: 1.6rem;
+        }
+    }
+    a{
+        position: absolute;
+        top: 29rem;
+        left: 3.2rem;
+        text-decoration: none;
+        color: $pink;
+        background-color: $reddark;
+        padding: 1.6rem;
+        border-radius: 0.8rem;
+        font-size: 1.6rem;
+    }
+    &::before{
+        content: '';
+        background-image: url('../assets/bg.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        
+        z-index: -1;
+        position: absolute;
+        height: calc(100vh + 5rem);
+        width: calc(100vw + 50px);
+        top: -3rem;
+        left: -3rem;
+
+    }
 }
